Added AllNotesView View Controller, Began creating core classes.

--- a/Notes/Base.lproj/Main.storyboard
+++ b/Notes/Base.lproj/Main.storyboard
@@ -1,25 +1,83 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="322-M5-9M0">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Navigation Controller-->
+        <scene sceneID="ntJ-yO-pjp">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <navigationController id="322-M5-9M0" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Z6H-Pg-6Nf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="fyd-Tp-1oi" kind="relationship" relationship="rootViewController" id="0AX-9W-3vO"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2J6-6s-bXU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="152" y="380"/>
+        </scene>
+        <!--My Notes-->
+        <scene sceneID="2W3-A8-y0Y">
+            <objects>
+                <tableViewController id="fyd-Tp-1oi" customClass="AllNotesViewTableViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="74" sectionHeaderHeight="28" sectionFooterHeight="28" id="euJ-TR-fpv">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="noteCell" rowHeight="74" id="9RV-Vr-F40" customClass="NoteTableViewCell" customModule="Notes" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="74"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="9RV-Vr-F40" id="JEL-v9-VK5">
+                                    <rect key="frame" x="0.0" y="0.0" width="567" height="73"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Edited: 12:12 PM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uDB-61-bmj">
+                                            <rect key="frame" x="27" y="39" width="507" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="15"/>
+                                            <color key="textColor" red="0.5607843137254902" green="0.55686274509803924" blue="0.58039215686274503" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important Note With Remarkably Long Title For Testing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkt-R7-wWq">
+                                            <rect key="frame" x="27" y="8" width="532" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="21"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="hkt-R7-wWq" secondAttribute="bottom" constant="23" id="36G-VX-WLc"/>
+                                        <constraint firstItem="uDB-61-bmj" firstAttribute="top" secondItem="JEL-v9-VK5" secondAttribute="topMargin" constant="31" id="82c-cF-xct"/>
+                                        <constraint firstItem="hkt-R7-wWq" firstAttribute="top" secondItem="JEL-v9-VK5" secondAttribute="topMargin" id="8E1-XA-6gC"/>
+                                        <constraint firstItem="hkt-R7-wWq" firstAttribute="trailing" secondItem="JEL-v9-VK5" secondAttribute="trailingMargin" id="J72-AY-QAh"/>
+                                        <constraint firstAttribute="bottom" secondItem="uDB-61-bmj" secondAttribute="bottom" id="Kxl-bZ-UG4"/>
+                                        <constraint firstItem="hkt-R7-wWq" firstAttribute="leading" secondItem="uDB-61-bmj" secondAttribute="leading" id="QGP-8N-rYf"/>
+                                        <constraint firstItem="hkt-R7-wWq" firstAttribute="leading" secondItem="JEL-v9-VK5" secondAttribute="leadingMargin" constant="19" id="j8M-Hn-r8X"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="uDB-61-bmj" secondAttribute="trailing" constant="25" id="uou-9u-pFU"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="noteLastEditDateLabel" destination="uDB-61-bmj" id="I1M-Aw-euV"/>
+                                    <outlet property="noteNameLabel" destination="hkt-R7-wWq" id="Mnk-Iv-bZF"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="fyd-Tp-1oi" id="ovo-l8-tyv"/>
+                            <outlet property="delegate" destination="fyd-Tp-1oi" id="Wgo-ui-ZFJ"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="My Notes" id="kbd-uF-V5b"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="J96-07-ieI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="152" y="380"/>
         </scene>
     </scenes>
 </document>
