--- a/Notes/Base.lproj/Main.storyboard
+++ b/Notes/Base.lproj/Main.storyboard
@@ -20,7 +20,59 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2J6-6s-bXU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="152" y="380"/>
+            <point key="canvasLocation" x="-946" y="338"/>
+        </scene>
+        <!--Note Edit View Controller-->
+        <scene sceneID="UcG-Of-1um">
+            <objects>
+                <viewController id="D0O-RU-tKh" customClass="NoteEditViewController" customModule="Notes" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="UgC-su-Di8"/>
+                        <viewControllerLayoutGuide type="bottom" id="6B7-Ue-tZ0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SQI-0N-Nf7">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="pKC-jK-8QH">
+                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="pKC-jK-8QH" firstAttribute="leading" secondItem="SQI-0N-Nf7" secondAttribute="leading" id="9DT-gm-WRQ"/>
+                            <constraint firstItem="pKC-jK-8QH" firstAttribute="top" secondItem="UgC-su-Di8" secondAttribute="bottom" id="YTz-v7-24Z"/>
+                            <constraint firstAttribute="trailing" secondItem="pKC-jK-8QH" secondAttribute="trailing" id="ncJ-EK-bgA"/>
+                            <constraint firstItem="pKC-jK-8QH" firstAttribute="bottom" secondItem="6B7-Ue-tZ0" secondAttribute="top" id="vEh-UX-xQu"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="HYc-2V-fwd">
+                        <nil key="title"/>
+                        <barButtonItem key="backBarButtonItem" title="Notes" id="YHs-k9-4C5"/>
+                        <textField key="titleView" opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tap To Change Title" textAlignment="center" minimumFontSize="17" id="tQR-V9-Ht9">
+                            <rect key="frame" x="180" y="7" width="240" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="b7x-YL-3TY">
+                            <connections>
+                                <action selector="editText:" destination="D0O-RU-tKh" id="jsK-Gb-Nlz"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="noteContentField" destination="pKC-jK-8QH" id="qwb-iJ-Hg5"/>
+                        <outlet property="noteTitleField" destination="tQR-V9-Ht9" id="Cf2-uW-DlL"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lmb-tz-es2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="453" y="338"/>
         </scene>
         <!--My Notes-->
         <scene sceneID="2W3-A8-y0Y">
@@ -47,7 +99,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Important Note With Remarkably Long Title For Testing" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hkt-R7-wWq">
                                             <rect key="frame" x="27" y="8" width="532" height="34"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="21"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -65,6 +117,7 @@
                                 <connections>
                                     <outlet property="noteLastEditDateLabel" destination="uDB-61-bmj" id="I1M-Aw-euV"/>
                                     <outlet property="noteNameLabel" destination="hkt-R7-wWq" id="Mnk-Iv-bZF"/>
+                                    <segue destination="D0O-RU-tKh" kind="show" id="0bx-a7-Tel"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -73,11 +126,13 @@
                             <outlet property="delegate" destination="fyd-Tp-1oi" id="Wgo-ui-ZFJ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="My Notes" id="kbd-uF-V5b"/>
+                    <navigationItem key="navigationItem" title="My Notes" id="kbd-uF-V5b">
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="r4o-L9-FTy"/>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J96-07-ieI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="152" y="380"/>
+            <point key="canvasLocation" x="-253" y="338"/>
         </scene>
     </scenes>
 </document>
