--- a/Notes/Base.lproj/Main.storyboard
+++ b/Notes/Base.lproj/Main.storyboard
@@ -35,19 +35,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="pKC-jK-8QH">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
+                                <rect key="frame" x="20" y="64" width="560" height="536"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" secureTextEntry="YES"/>
+                                <connections>
+                                    <outlet property="delegate" destination="D0O-RU-tKh" id="fhc-eB-iqe"/>
+                                </connections>
                             </textView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="pKC-jK-8QH" firstAttribute="leading" secondItem="SQI-0N-Nf7" secondAttribute="leading" id="9DT-gm-WRQ"/>
-                            <constraint firstItem="pKC-jK-8QH" firstAttribute="top" secondItem="UgC-su-Di8" secondAttribute="bottom" id="YTz-v7-24Z"/>
-                            <constraint firstAttribute="trailing" secondItem="pKC-jK-8QH" secondAttribute="trailing" id="ncJ-EK-bgA"/>
-                            <constraint firstItem="pKC-jK-8QH" firstAttribute="bottom" secondItem="6B7-Ue-tZ0" secondAttribute="top" id="vEh-UX-xQu"/>
+                            <constraint firstItem="pKC-jK-8QH" firstAttribute="trailing" secondItem="SQI-0N-Nf7" secondAttribute="trailingMargin" id="56l-bf-je8"/>
+                            <constraint firstItem="pKC-jK-8QH" firstAttribute="leading" secondItem="SQI-0N-Nf7" secondAttribute="leadingMargin" id="Enc-bV-wno"/>
+                            <constraint firstItem="pKC-jK-8QH" firstAttribute="trailing" secondItem="SQI-0N-Nf7" secondAttribute="trailingMargin" id="NwC-jb-mJ7"/>
+                            <constraint firstItem="pKC-jK-8QH" firstAttribute="top" secondItem="UgC-su-Di8" secondAttribute="bottom" id="QQ1-FU-nRK"/>
+                            <constraint firstItem="6B7-Ue-tZ0" firstAttribute="top" secondItem="pKC-jK-8QH" secondAttribute="bottom" id="SQk-9B-Tlg"/>
+                            <constraint firstItem="pKC-jK-8QH" firstAttribute="bottom" secondItem="6B7-Ue-tZ0" secondAttribute="top" id="VRK-ll-9Wf"/>
+                            <constraint firstItem="pKC-jK-8QH" firstAttribute="top" secondItem="UgC-su-Di8" secondAttribute="bottom" id="Zxk-Fv-Xd8"/>
+                            <constraint firstItem="pKC-jK-8QH" firstAttribute="leading" secondItem="SQI-0N-Nf7" secondAttribute="leadingMargin" id="r2c-Ie-XfY"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="HYc-2V-fwd">
@@ -58,6 +65,9 @@
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             <fontDescription key="fontDescription" type="system" pointSize="20"/>
                             <textInputTraits key="textInputTraits"/>
+                            <connections>
+                                <action selector="textFieldDidChange:" destination="D0O-RU-tKh" eventType="editingChanged" id="jZw-8t-wpq"/>
+                            </connections>
                         </textField>
                         <barButtonItem key="rightBarButtonItem" title="Edit" id="b7x-YL-3TY">
                             <connections>
@@ -117,7 +127,7 @@
                                 <connections>
                                     <outlet property="noteLastEditDateLabel" destination="uDB-61-bmj" id="I1M-Aw-euV"/>
                                     <outlet property="noteNameLabel" destination="hkt-R7-wWq" id="Mnk-Iv-bZF"/>
-                                    <segue destination="D0O-RU-tKh" kind="show" id="0bx-a7-Tel"/>
+                                    <segue destination="D0O-RU-tKh" kind="show" identifier="edit" id="0bx-a7-Tel"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -127,7 +137,11 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="My Notes" id="kbd-uF-V5b">
-                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="r4o-L9-FTy"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="compose" id="r4o-L9-FTy">
+                            <connections>
+                                <segue destination="D0O-RU-tKh" kind="show" identifier="compose" id="zsL-Ev-uAc"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J96-07-ieI" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -135,4 +149,7 @@
             <point key="canvasLocation" x="-253" y="338"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="0bx-a7-Tel"/>
+    </inferredMetricsTieBreakers>
 </document>
