--- a/Notes/EditView.xib
+++ b/Notes/EditView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -11,7 +11,18 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QDS-KY-mXq">
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sLP-sq-nli">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
+                    <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="100" id="TJJ-wc-YEp"/>
+                    </constraints>
+                    <state key="normal" title="Change Font"/>
+                    <connections>
+                        <action selector="changeFont:" destination="iN0-l3-epB" eventType="touchUpInside" id="Fpl-nH-jUF"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QDS-KY-mXq">
                     <rect key="frame" x="0.0" y="100" width="600" height="100"/>
                     <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                     <state key="normal" title="Change Color"/>
@@ -19,18 +30,24 @@
                         <action selector="changeColor:" destination="iN0-l3-epB" eventType="touchUpInside" id="hyD-zS-VLk"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sLP-sq-nli">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="100"/>
-                    <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    <state key="normal" title="Change Font"/>
-                    <connections>
-                        <action selector="changeFont:" destination="iN0-l3-epB" eventType="touchUpInside" id="Fpl-nH-jUF"/>
-                    </connections>
-                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="sLP-sq-nli" secondAttribute="trailing" id="Txi-He-NNa"/>
+                <constraint firstItem="QDS-KY-mXq" firstAttribute="top" secondItem="sLP-sq-nli" secondAttribute="bottom" id="aes-i7-xah"/>
+                <constraint firstItem="sLP-sq-nli" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="eue-qn-y3m"/>
+                <constraint firstAttribute="bottom" secondItem="QDS-KY-mXq" secondAttribute="bottom" id="lKY-eF-tDb"/>
+                <constraint firstItem="sLP-sq-nli" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="lvo-bs-QDD"/>
+                <constraint firstItem="sLP-sq-nli" firstAttribute="trailing" secondItem="QDS-KY-mXq" secondAttribute="trailing" id="nUg-D2-zy7"/>
+                <constraint firstItem="sLP-sq-nli" firstAttribute="leading" secondItem="QDS-KY-mXq" secondAttribute="leading" id="rqd-RJ-wIT"/>
+            </constraints>
+            <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="638" y="257"/>
+            <connections>
+                <outlet property="colorButton" destination="QDS-KY-mXq" id="Nk5-Gb-Kv3"/>
+                <outlet property="fontButton" destination="sLP-sq-nli" id="M3c-Xj-JSE"/>
+            </connections>
+            <point key="canvasLocation" x="777" y="267"/>
         </view>
     </objects>
 </document>
