--- a/Notes/Base.lproj/Main.storyboard
+++ b/Notes/Base.lproj/Main.storyboard
@@ -81,7 +81,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lmb-tz-es2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="453" y="338"/>
+            <point key="canvasLocation" x="446" y="315"/>
         </scene>
         <!--My Notes-->
         <scene sceneID="2W3-A8-y0Y">
@@ -138,7 +138,7 @@
                     <navigationItem key="navigationItem" title="My Notes" id="kbd-uF-V5b">
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="r4o-L9-FTy">
                             <connections>
-                                <segue destination="D0O-RU-tKh" kind="show" identifier="compose" id="zsL-Ev-uAc"/>
+                                <segue destination="D0O-RU-tKh" kind="show" identifier="compose" id="gpg-qP-GCn"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -149,6 +149,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="0bx-a7-Tel"/>
+        <segue reference="gpg-qP-GCn"/>
     </inferredMetricsTieBreakers>
 </document>
