--- a/Notes/EditView.xib
+++ b/Notes/EditView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
@@ -58,6 +58,7 @@
                 <constraint firstItem="QDS-KY-mXq" firstAttribute="height" secondItem="sLP-sq-nli" secondAttribute="height" id="Yo6-bm-nEN"/>
                 <constraint firstItem="QDS-KY-mXq" firstAttribute="width" secondItem="sLP-sq-nli" secondAttribute="width" id="Zpt-yK-mGs"/>
                 <constraint firstItem="QDS-KY-mXq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="fE3-sR-jdA"/>
+                <constraint firstAttribute="trailing" secondItem="sLP-sq-nli" secondAttribute="trailing" id="xLT-rQ-Rvj"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -65,7 +66,7 @@
                 <outlet property="colorButton" destination="QDS-KY-mXq" id="Nk5-Gb-Kv3"/>
                 <outlet property="fontButton" destination="sLP-sq-nli" id="M3c-Xj-JSE"/>
             </connections>
-            <point key="canvasLocation" x="777" y="79"/>
+            <point key="canvasLocation" x="391" y="224"/>
         </view>
     </objects>
 </document>
