--- a/Notes/EditView.xib
+++ b/Notes/EditView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
@@ -10,14 +10,14 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QDS-KY-mXq">
-                    <rect key="frame" x="0.0" y="0.0" width="300" height="200"/>
-                    <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                <button opaque="NO" contentMode="center" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QDS-KY-mXq">
+                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="0.16538254310344827" colorSpace="calibratedRGB"/>
                     <state key="normal">
                         <attributedString key="attributedTitle">
                             <fragment content="Change Color">
                                 <attributes>
-                                    <color key="NSColor" red="0.20000000000000001" green="0.20000000000000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="NSColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <font key="NSFont" size="18" name="HelveticaNeue"/>
                                     <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                 </attributes>
@@ -28,45 +28,33 @@
                         <action selector="changeColor:" destination="iN0-l3-epB" eventType="touchUpInside" id="hyD-zS-VLk"/>
                     </connections>
                 </button>
-                <button opaque="NO" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sLP-sq-nli">
-                    <rect key="frame" x="300" y="0.0" width="300" height="200"/>
-                    <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                <button opaque="NO" contentMode="center" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YW8-pV-Qx1">
+                    <rect key="frame" x="200" y="0.0" width="200" height="200"/>
+                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.088927801724137931" colorSpace="calibratedRGB"/>
                     <state key="normal">
                         <attributedString key="attributedTitle">
                             <fragment content="Change Font">
                                 <attributes>
-                                    <color key="NSColor" red="0.20000000000000001" green="0.20000000000000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                     <font key="NSFont" size="18" name="HelveticaNeue"/>
-                                    <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                    <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
                                 </attributes>
                             </fragment>
                         </attributedString>
                     </state>
                     <connections>
-                        <action selector="changeFont:" destination="iN0-l3-epB" eventType="touchUpInside" id="Fpl-nH-jUF"/>
+                        <action selector="changeFont:" destination="iN0-l3-epB" eventType="touchUpInside" id="rLn-36-8d0"/>
                     </connections>
                 </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <constraints>
-                <constraint firstItem="QDS-KY-mXq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="57j-Jf-tXL"/>
-                <constraint firstAttribute="bottom" secondItem="sLP-sq-nli" secondAttribute="bottom" id="Ckr-ht-SYg"/>
-                <constraint firstAttribute="trailing" secondItem="sLP-sq-nli" secondAttribute="trailing" id="QBd-e1-8bI"/>
-                <constraint firstAttribute="bottom" secondItem="QDS-KY-mXq" secondAttribute="bottom" id="TRX-DC-oqE"/>
-                <constraint firstItem="sLP-sq-nli" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="UaR-y0-h6X"/>
-                <constraint firstItem="sLP-sq-nli" firstAttribute="leading" secondItem="QDS-KY-mXq" secondAttribute="trailing" id="Vda-TK-BnJ"/>
-                <constraint firstItem="QDS-KY-mXq" firstAttribute="height" secondItem="sLP-sq-nli" secondAttribute="height" id="Yo6-bm-nEN"/>
-                <constraint firstItem="QDS-KY-mXq" firstAttribute="width" secondItem="sLP-sq-nli" secondAttribute="width" id="Zpt-yK-mGs"/>
-                <constraint firstItem="QDS-KY-mXq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="fE3-sR-jdA"/>
-                <constraint firstAttribute="trailing" secondItem="sLP-sq-nli" secondAttribute="trailing" id="xLT-rQ-Rvj"/>
-            </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="colorButton" destination="QDS-KY-mXq" id="Nk5-Gb-Kv3"/>
-                <outlet property="fontButton" destination="sLP-sq-nli" id="M3c-Xj-JSE"/>
+                <outlet property="fontButton" destination="YW8-pV-Qx1" id="1hN-8l-r4V"/>
             </connections>
-            <point key="canvasLocation" x="391" y="224"/>
+            <point key="canvasLocation" x="538" y="455"/>
         </view>
     </objects>
 </document>
